<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/to_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_to_gallery"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/please_inputURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_inputURL"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_gallery"/>

    <EditText
        android:id="@+id/URL_input_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textMultiLine"
        android:hint="@string/input"
        android:maxLines="7"
        android:maxLength="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/start_download"
        app:layout_constraintTop_toBottomOf="@+id/please_inputURL"
        android:autofillHints="URL"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/start_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_inputURL"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/URL_input_field"
        app:layout_constraintBottom_toTopOf="@id/clear"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/clear"
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/to_document" />

    <Button
        android:id="@+id/to_document"
        android:text="@string/download_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/clear"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>